--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.thorasDashboard.serviceAccount.name }}
       containers:
-      - image: {{ .Values.imageCredentials.registry }}/thoras-dashboard:{{ default .Values.thorasVersion .Values.thorasDashboard.image }}
+      - image: {{ .Values.imageCredentials.registry }}/thoras-dashboard:{{ default .Values.thorasVersion .Values.thorasDashboard.imageTag }}
         imagePullPolicy: Always
         name: thoras-dashboard
         ports:
