--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -36,6 +36,8 @@ spec:
               secretKeyRef:
                 name: thoras-elastic-password
                 key: host
+          - name: THORAS_VERSION
+            value: {{ .Chart.Version | replace "+" "_" }}
         args:
           - start
         resources:
