--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             name: elastic-search-data
       {{- end }}
       containers:
-      - image: {{ .Values.metricsCollector.search.imageTag }}
+      - image: {{ .Values.metricsCollector.search.image }}
         imagePullPolicy: Always
         name: {{ .Values.metricsCollector.search.name }}
         ports:
