Allow int or str for forecast_blocks

--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -241,7 +241,10 @@ spec:
                       pattern: '^(\d+|\*)(/\d+)?(\s+(\d+|\*)(/\d+)?){4}$'
                       default: '*/15 * * * *'
                     forecast_blocks:
-                      type: string
+                      anyOf:
+                        - type: integer
+                        - type: string
+                      x-kubernetes-int-or-string: true
             status:
               type: object
               properties:
