--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -17,7 +17,7 @@ metricsCollector:
   collector:
     name: thoras-collector
   search:
-    image: elasticsearch:8.12.1
+    imageTag: "8.12.1"
     name: elasticsearch
     containerPort: 9200
   purge:
