Give hook a 0 ttl

--- a/charts/thoras/templates/collector/purge-forecast-hook.yaml
+++ b/charts/thoras/templates/collector/purge-forecast-hook.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     helm.sh/hook: pre-delete
 spec:
+  ttlSecondsAfterFinished: 0
   template:
     spec:
       serviceAccountName: thoras-operator
