--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -26,6 +26,7 @@ spec:
             command: ["/bin/sh", "-c"]
             args:
               - |
+                node index.js \
                 purge \
                 --es=${ES_HOST} \
                 --ttl={{ .Values.metricsCollector.purge.ttl }}
