Only scale deployments

--- a/charts/thoras/templates/api-server/webhooks.yaml
+++ b/charts/thoras/templates/api-server/webhooks.yaml
@@ -52,7 +52,7 @@ webhooks:
   - apiGroups:   ["*"]
     apiVersions: ["*"]
     operations:  ["UPDATE"]
-    resources:   ["*/scale"]
+    resources:   ["deployments/scale"]
     scope:       "Namespaced"
   clientConfig:
     service:
