Make imagePullPolicy configurable, defaulting to IfNotPresent

--- a/charts/thoras/templates/api-server/deployment.yaml
+++ b/charts/thoras/templates/api-server/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             secretName: thoras-api-server-cert
       containers:
       - image: {{ .Values.imageCredentials.registry }}/thoras-external-metrics-server:{{ default .Values.thorasVersion .Values.thorasApiServer.imageTag }}
-        imagePullPolicy: Always
+        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         name: thoras-api-server
         env:
           - name: "ES_HOST"
