--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -15,8 +15,8 @@ spec:
           restartPolicy: OnFailure
           containers:
           - image: {{ .Values.imageCredentials.registry }}/thoras-collector:{{ default .Values.thorasVersion .Values.metricsCollector.collector.imageTag }}
-            imagePullPolicy: Always
             name: metrics-collector
+            imagePullPolicy: "{{ .Values.imagePullPolicy }}"
             env:
               - name: "ES_HOST"
                 valueFrom:
