--- a/charts/thoras/templates/collector/purge-forecast-hook.yaml
+++ b/charts/thoras/templates/collector/purge-forecast-hook.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - image: {{ .Values.imageCredentials.registry }}/thoras-collector:{{ default .Values.thorasVersion .Values.metricsCollector.collector.imageTag }}
-        imagePullPolicy: Always
         name: metrics-collector
+        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         args:
           - purgeCronjobs
