--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -59,6 +59,9 @@ thorasDashboard:
     cpu: 100m
     memory: 100Mi
   port: 80
+  service:
+    type: ClusterIP
+    annotations: {}
 
 thorasMonitor:
   enabled: false
