--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -22,6 +22,7 @@ metricsCollector:
     enabled: false
     volumeName: ""
     storageClassName: ""
+  podAnnotations: {}
   collector:
     name: thoras-collector
   search:
