Added monitor config

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -77,12 +77,9 @@ thorasDashboard:
 thorasMonitor:
   enabled: false
   podAnnotations: {}
-  monitorCadenceSeconds: "15"
-  maxJobLifeSeconds: "600"
-  underProvisionThreshold: "0.1"
-  overProvisionThreshold: "10"
   slackWorkspaceID: ""
   slackChannelID: ""
   slackWebhookID: ""
+  config: |
 
 thorasForecast: {}
