--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -48,6 +48,8 @@ spec:
                 fieldPath: metadata.namespace
           - name: "MODEL_IMAGE"
             value: {{ .Values.imageCredentials.registry }}/thoras-forecast:{{ default .Values.thorasVersion .Values.thorasForecast.imageTag }}
+          - name: "LOGLEVEL"
+            value: {{ default .Values.logLevel .Values.thorasDashboard.logLevel }}
         resources:
           limits:
             cpu: {{ .Values.thorasDashboard.limits.cpu }}
