--- a/charts/thoras/templates/monitor/deployment.yaml
+++ b/charts/thoras/templates/monitor/deployment.yaml
@@ -78,5 +78,7 @@ spec:
           - name: SLACK_WORKSPACE_ID
             value: {{ .Values.thorasMonitor.slackWorkspaceID }}
           - name: SLACK_CHANNEL_ID
-            value: {{ .Values.thorasMonitor.slackChannelID }}
+            value: {{ .Values.thorasMonitor.slackChannelID }}\
+          - name: "LOGLEVEL"
+            value: {{ default .Values.logLevel .Values.thorasMonitor.logLevel }}
 {{- end }}
