Add default values for slackErrorsEnabled/slackWebhookURL to values.yaml

--- a/charts/thoras/templates/api-server/deployment.yaml
+++ b/charts/thoras/templates/api-server/deployment.yaml
@@ -45,7 +45,7 @@ spec:
           - name: SLACK_WEBHOOK_URL
             value: {{ .Values.thorasApiServer.slackWebhookUrl | default .Values.slackWebhookUrl }}
           - name: SLACK_ERRORS_ENABLED
-            value: {{ .Values.thorasApiServer.slackErrorsEnabled | default .Values.slackErrorsEnabled | default false }}
+            value: {{ .Values.thorasApiServer.slackErrorsEnabled | default .Values.slackErrorsEnabled }}
           - name: "LOGLEVEL"
             value: {{ default .Values.logLevel .Values.thorasApiServer.logLevel }}
         volumeMounts:
