--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -47,7 +47,7 @@ spec:
           - name: SLACK_WEBHOOK_URL
             value: {{ .Values.thorasOperator.slackWebhookUrl | default .Values.slackWebhookUrl }}
           - name: SLACK_ERRORS_ENABLED
-            value: {{ .Values.thorasOperator.slackErrorsEnabled | default .Values.slackErrorsEnabled | default false }}
+            value: {{ .Values.thorasOperator.slackErrorsEnabled | default .Values.slackErrorsEnabled }}
           - name: "LOGLEVEL"
             value: {{ default .Values.logLevel .Values.thorasOperator.logLevel }}
         args:
