--- a/charts/thoras/templates/monitor/secret.yaml
+++ b/charts/thoras/templates/monitor/secret.yaml
@@ -2,7 +2,7 @@
 ---
 apiVersion: v1
 data:
-  webhookID: {{ .Values.thorasMonitor.slackWebhookID | b64enc }}
+  webhookUrl: {{ .Values.thorasMonitor.slackWebhookUrl | b64enc }}
 kind: Secret
 metadata:
   name: thoras-slack
