--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -24,7 +24,10 @@ spec:
                     name: thoras-elastic-password
                     key: host
               - name: SLACK_WEBHOOK_URL
-                value: {{ .Values.metricsCollector.slackWebhookUrl | default .Values.slackWebhookUrl }}
+                valueFrom:
+                  secretKeyRef:
+                    name: thoras-slack
+                    key: webhookUrl
               - name: SLACK_ERRORS_ENABLED
                 value: {{ .Values.metricsCollector.slackErrorsEnabled | default .Values.slackErrorsEnabled }}
               - name: "LOGLEVEL"
