--- a/charts/thoras/templates/monitor/deployment.yaml
+++ b/charts/thoras/templates/monitor/deployment.yaml
@@ -70,13 +70,11 @@ spec:
               secretKeyRef:
                 name: thoras-elastic-password
                 key: host
-          - name: "WEBHOOK_ID"
+          - name: SLACK_WEBHOOK_URL
             valueFrom:
               secretKeyRef:
                 name: thoras-slack
-                key: webhookID
-          - name: SLACK_WEBHOOK_URL
-            value: {{ .Values.thorasMonitor.slackWebhookUrl | default .Values.slackWebhookUrl }}
+                key: webhookUrl
           - name: SLACK_ERRORS_ENABLED
             value: {{ .Values.thorasMonitor.slackErrorsEnabled | default .Values.slackErrorsEnabled }}
           - name: "LOGLEVEL"
