--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -26,7 +26,7 @@ spec:
               - name: SLACK_WEBHOOK_URL
                 value: {{ .Values.metricsCollector.slackWebhookUrl | default .Values.slackWebhookUrl }}
               - name: SLACK_ERRORS_ENABLED
-                value: {{ .Values.metricsCollector.slackErrorsEnabled | default .Values.slackErrorsEnabled }}
+                value: "{{ .Values.metricsCollector.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
               - name: "LOGLEVEL"
                 value: {{ default .Values.logLevel .Values.metricsCollector.purge.logLevel }}
             command: ["/bin/sh", "-c"]
