--- a/charts/thoras/templates/collector/pvc.yaml
+++ b/charts/thoras/templates/collector/pvc.yaml
@@ -14,7 +14,9 @@ spec:
   {{- if .Values.metricsCollector.persistence.volumeName }}
   volumeName: {{ .Values.metricsCollector.persistence.volumeName }}
   {{- end }}
+  {{- if (not .Values.metricsCollector.persistence.volumeName) }}
   storageClassName: {{ .Values.metricsCollector.persistence.storageClassName }}
+  {{- end }}
   accessModes:
     - ReadWriteOnce
   resources:
