Fix version check command

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
         shell: bash
         id: version_bump
         run: |
-          if git diff origin/main -- charts/*/Chart.yaml | grep -E '^version:'; then
+          # Diff HEAD against pre-merge state and look for version bump
+          if git diff $(git rev-parse HEAD^1)..HEAD charts/*/Chart.yaml | grep -E '^version:'; then
             echo "is_bump=true" >> $GITHUB_ENV
           else
             echo "is_bump=false" >> $GITHUB_ENV
