Use the correct object

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           # Diff HEAD against pre-merge state and look for version bump
           if git diff $(git rev-parse HEAD^1)..HEAD charts/*/Chart.yaml | grep -E '^\+version:'; then
-            echo "is_bump=true" >> $GITHUB_ENV
+            echo "is_bump=true" >> $GITHUB_OUTPUT
           else
-            echo "is_bump=false" >> $GITHUB_ENV
+            echo "is_bump=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Configure Git
