Add thoras-agent service that prometheus can scrape for metrics

--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -35,6 +35,10 @@ spec:
         env:
           - name: "SERVICE_LOG_LEVEL"
             value: {{ default .Values.logLevel .Values.thorasAgent.logLevel }}
+          - name: "SERVICE_FREQUENCY"
+            value: {{ .Values.thorasAgent.Frequency | quote }}
+          - name: "SERVICE_PORT"
+            value: {{ .Values.thorasAgent.containerPort | quote }}
         resources:
           limits:
             memory: 128Mi
