Update frequency default

--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -36,7 +36,7 @@ spec:
           - name: "SERVICE_LOG_LEVEL"
             value: {{ default .Values.logLevel .Values.thorasAgent.logLevel }}
           - name: "SERVICE_FREQUENCY"
-            value: {{ .Values.thorasAgent.Frequency | quote }}
+            value: {{ .Values.thorasAgent.frequency | quote }}
           - name: "SERVICE_PORT"
             value: {{ .Values.thorasAgent.containerPort | quote }}
         resources:
