--- a/charts/thoras/templates/agent/service.yaml
+++ b/charts/thoras/templates/agent/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: thoras-agent
   namespace: {{ .Release.Namespace }}
-  labels:
+  annotations:
     prometheus.io/scrape: "true"
 spec:
   ports:
