--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -117,6 +117,8 @@ thorasAgent:
   frequency: 15
   containerPort: 9100
   port: 9100
+  podAnnotations:
+    prometheus.io/scrape: "true"
 
 thorasReasoningApi:
   enabled: false
