Pin chart version when snapshot matching

--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -10,5 +10,7 @@ set:
       create: true
 tests:
   - it: Default matches snapshot
+    chart:
+      version: "4.7.0"
     asserts:
       - matchSnapshot: {}
