--- a/charts/thoras/templates/collector/secret.yaml
+++ b/charts/thoras/templates/collector/secret.yaml
@@ -10,3 +10,14 @@ data:
 kind: Secret
 metadata:
   name: thoras-elastic-password
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: thoras-timescale-password
+data:
+  {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "thoras-timescale-password") }}
+  {{- $secretData := (get $secretObj "data") | default dict }}
+  {{- $esPassword := (get $secretData "password") | default ((.Values.metricsCollector.timescale.password | default $newEsPassword) | b64enc) }}
+  password: {{ $esPassword | quote }}
+  host: {{ (printf "postgres://postgres:%s@%s:%d" ($esPassword | b64dec) .Values.metricsCollector.timescale.name (.Values.metricsCollector.timescale.containerPort | int)) | b64enc | quote }}
