--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -64,6 +64,10 @@ metricsCollector:
     schedule: "00 00 * * *"
   init:
     imageTag: "latest"
+  timescale:
+    enabled: false
+    name: timescale
+    containerPort: 5432
 
 thorasApiServer:
   containerPort: 8443
