--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -66,6 +66,7 @@ metricsCollector:
     imageTag: "latest"
   timescale:
     enabled: false
+    imageTag: "2.17.2-pg16"
     name: timescale
     containerPort: 5432
 
