--- a/charts/thoras/templates/collector/secret.yaml
+++ b/charts/thoras/templates/collector/secret.yaml
@@ -11,6 +11,7 @@ kind: Secret
 metadata:
   name: thoras-elastic-password
 ---
+{{- $newPgPassword := randAlphaNum 16 }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -18,6 +19,6 @@ metadata:
 data:
   {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "thoras-timescale-password") }}
   {{- $secretData := (get $secretObj "data") | default dict }}
-  {{- $esPassword := (get $secretData "password") | default ((.Values.metricsCollector.timescale.password | default $newEsPassword) | b64enc) }}
-  password: {{ $esPassword | quote }}
-  host: {{ (printf "postgres://postgres:%s@%s:%d" ($esPassword | b64dec) .Values.metricsCollector.timescale.name (.Values.metricsCollector.timescale.containerPort | int)) | b64enc | quote }}
+  {{- $pgPassword := (get $secretData "password") | default ((.Values.metricsCollector.timescale.password | default $newPgPassword) | b64enc) }}
+  password: {{ $pgPassword | quote }}
+  host: {{ (printf "postgres://postgres:%s@%s:%d" ($pgPassword | b64dec) .Values.metricsCollector.timescale.name (.Values.metricsCollector.timescale.containerPort | int)) | b64enc | quote }}
