Remove v1 api server from unit tests
Remove v1 api server from unit tests

--- a/charts/thoras/tests/dashboard_deployment_test.yaml
+++ b/charts/thoras/tests/dashboard_deployment_test.yaml
@@ -19,3 +19,6 @@ tests:
       - equal:
           path: spec.replicas
           value: 12
+      - equal:
+          path: spec.template.spec.containers[0].volumeMounts[0].mountPath
+          value: /etc/config
