--- a/charts/thoras/templates/operator/webhooks.yaml
+++ b/charts/thoras/templates/operator/webhooks.yaml
@@ -1,14 +1,14 @@
-{{- $ca := genCA "thoras-api-server-ca" 3650 }}
-{{- $cn := "thoras-api-server" }}
+---
+{{- $ca := genCA "thoras-webhooks-ca" 3650 }}
+{{- $cn := "thoras-webhooks" }}
 {{- $dns1 := printf "%s.%s" $cn .Release.Namespace }}
 {{- $dns2 := printf "%s.%s.svc" $cn .Release.Namespace }}
 {{- $cert := genSignedCert $cn nil (list $dns1 $dns2) 3650 $ca }}
----
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/tls
 metadata:
-  name: thoras-api-server-cert
+  name: thoras-webhooks-cert
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Chart.Name }}
@@ -16,7 +16,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
 data:
-  {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "thoras-api-server-cert") }}
+  {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "thoras-webhooks-cert") }}
   {{- $secretData := (get $secretObj "data") | default dict }}
   {{- $secretCert := (get $secretData "tls.crt") | default ($cert.Cert | b64enc) }}
   {{- $secretKey := (get $secretData "tls.key") | default ($cert.Key | b64enc) }}
@@ -40,8 +40,8 @@ webhooks:
   clientConfig:
     service:
       namespace: {{ .Release.Namespace }}
-      name: thoras-api-server
-      path: /mutate
+      name: thoras-webhooks
+      path: /mutate--v1-pod
     caBundle: {{ $secretCaCert | quote }}
   sideEffects: None
   failurePolicy: 'Ignore'
@@ -52,47 +52,18 @@ webhooks:
   - apiGroups:   ["*"]
     apiVersions: ["*"]
     operations:  ["UPDATE"]
-    resources:   ["deployments/scale"]
+    resources:   ["*/scale"]
     scope:       "Namespaced"
   clientConfig:
     service:
       namespace: {{ .Release.Namespace }}
-      name: thoras-api-server
-      path: /mutate
+      name: thoras-webhooks
+      path: /mutate-autoscaling-v1-scale
     caBundle: {{ $secretCaCert | quote }}
   sideEffects: None
   failurePolicy: 'Ignore'
   admissionReviewVersions:
     - v1
----
-apiVersion: admissionregistration.k8s.io/v1
-kind: ValidatingWebhookConfiguration
-metadata:
-  name: "status.thoras.ai"
-webhooks:
-  - name: "status.thoras.ai"
-    namespaceSelector:
-      matchExpressions:
-        - key: runlevel
-          operator: NotIn
-          values: ["0","1"]
-    rules:
-      - operations: ["UPDATE"]
-        apiGroups: ["apps"]
-        apiVersions: ["*"]
-        resources: ["deployments/status"]
-        scope: "*"
-    clientConfig:
-      service:
-        namespace: {{ .Release.Namespace }}
-        name: thoras-api-server
-        path: /syncstatus
-      caBundle: {{ $secretCaCert | quote }}
-    sideEffects: None
-    failurePolicy: 'Ignore'
-    timeoutSeconds: 5
-    admissionReviewVersions:
-      - v1
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
@@ -109,8 +80,26 @@ webhooks:
     clientConfig:
       service:
         namespace: {{ .Release.Namespace }}
-        name: thoras-api-server
-        path: /validate
+        name: thoras-webhooks
+        path: /validate-thoras-ai-v1-aiscaletarget
+      caBundle: {{ $secretCaCert | quote }}
+    sideEffects: None
+    failurePolicy: 'Ignore'
+    timeoutSeconds: 5
+    admissionReviewVersions:
+      - v1
+  - name: "scale-validation.thoras.ai"
+    rules:
+    - apiGroups:   ["*"]
+      apiVersions: ["*"]
+      operations:  ["UPDATE"]
+      resources:   ["*/scale"]
+      scope:       "Namespaced"
+    clientConfig:
+      service:
+        namespace: {{ .Release.Namespace }}
+        name: thoras-webhooks
+        path: /validate-autoscaling-v1-scale
       caBundle: {{ $secretCaCert | quote }}
     sideEffects: None
     failurePolicy: 'Ignore'
